--- a/Proyecto-Auditoria/Proyecto-Auditoria/Views/Home/Index.cshtml
+++ b/Proyecto-Auditoria/Proyecto-Auditoria/Views/Home/Index.cshtml
@@ -2,7 +2,97 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+
+    <div class="row column1">
+        <div class="col-md-6 col-lg-3">
+            <div class="full counter_section margin_bottom_30">
+                <div class="couter_icon">
+                    <div> 
+                    <i class="fa fa-user yellow_color"></i>
+                    </div>
+                </div>
+                <div class="counter_no">
+                    <div>
+                    <p class="total_no">2500</p>
+                    <p class="head_couter">Welcome</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="full counter_section margin_bottom_30">
+                <div class="couter_icon">
+                    <div> 
+                    <i class="fa fa-clock-o blue1_color"></i>
+                    </div>
+                </div>
+                <div class="counter_no">
+                    <div>
+                    <p class="total_no">123.50</p>
+                    <p class="head_couter">Average Time</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="full counter_section margin_bottom_30">
+                <div class="couter_icon">
+                    <div> 
+                    <i class="fa fa-cloud-download green_color"></i>
+                    </div>
+                </div>
+                <div class="counter_no">
+                    <div>
+                    <p class="total_no">1,805</p>
+                    <p class="head_couter">Collections</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="full counter_section margin_bottom_30">
+                <div class="couter_icon">
+                    <div> 
+                    <i class="fa fa-comments-o red_color"></i>
+                    </div>
+                </div>
+                <div class="counter_no">
+                    <div>
+                    <p class="total_no">54</p>
+                    <p class="head_couter">Comments</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row col-md-12 column4 graph">
+        <div class="col-md-12 margin_bottom_30">
+            <div class="dash_blog">
+                <div class="dash_blog_inner">
+                    <div class="dash_head">
+                    <h3><span><i class="fa fa-calendar"></i> Auditorias</span><span class="plus_green_bt"><a href="#">+</a></span></h3>
+                    </div>
+                    <div class="list_cont">
+                    <p>Listado de auditorias</p>
+                    </div>
+                    <div class="task_list_main">
+                    <ul class="task_list">
+                        <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>10:00 AM</strong></li>
+                        <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
+                        <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>11:00 AM</strong></li>
+                        <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
+                        <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>02:00 PM</strong></li>
+                    </ul>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+
 </div>
