--- a/Proyecto-Auditoria/Proyecto-Auditoria/Views/Activo/Index.cshtml
+++ b/Proyecto-Auditoria/Proyecto-Auditoria/Views/Activo/Index.cshtml
@@ -50,10 +50,10 @@
                                         <i class="fa fa-pencil white_color2"></i> 
                                     </a>
 
-                                    <a class="btn btn-danger btn-xs" asp-action="Delete" asp-controller="Activo" asp-route-id="@item.CodigoActivo">
+                                    @*<a class="btn btn-danger btn-xs" asp-action="Delete" asp-controller="Activo" asp-route-id="@item.CodigoActivo">
                                         <i class="fa fa-trash white_color2" ></i> 
                                     </a>
-                                    
+*@                                    
                                     <a class="btn btn-info btn-xs" asp-action="Detail" asp-controller="Activo" asp-route-id="@item.CodigoActivo">
                                         <i class="fa fa-eye white_color2" ></i> 
                                     </a>
