--- a/Proyecto-Auditoria/Proyecto-Auditoria/Views/Caracteristicas/Detail.cshtml
+++ b/Proyecto-Auditoria/Proyecto-Auditoria/Views/Caracteristicas/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Proyecto_Auditoria.Models.CaracteristicaActivo
 @{
-    ViewBag.Titulo = "Crear Caracteristicas de Activo";
+    ViewBag.Titulo = "Caracteristicas de Activo";
     Activo ActivoFiltrado = ViewData["Activo"] as Activo;
     IEnumerable<ListadoCaracteristicaTipoActivo> listaCaracteristicas = ViewData["ListadoCaracteristicas"] as IEnumerable<ListadoCaracteristicaTipoActivo>;
     IEnumerable<CaracteristicaActivo> listaCaracteristicaActivo = ViewData["ListadoCaracteristicasActivo"] as IEnumerable<CaracteristicaActivo>;
@@ -10,12 +10,9 @@
 
 	<div class="col-md-12">
 
-        @if (@ViewBag.Mensaje != null)
-        {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                @ViewBag.Mensaje
-            </div>
-        }        
+        <a class="btn btn-info btn-small margin_bottom_30" asp-area="" asp-controller="Caracteristicas" asp-action="Index" asp-route-id="@ActivoFiltrado.CodigoTipoActivoNavigation.Descripcion">
+                <span>Regresar</span>
+        </a>        
 
         <div class="row margin_bottom_15">
 
