--- a/Proyecto-Auditoria/Proyecto-Auditoria/Views/Shared/_Layout.cshtml
+++ b/Proyecto-Auditoria/Proyecto-Auditoria/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                <div class="sidebar_blog_2">
                   <h4>General</h4>
                   <ul class="list-unstyled components">
-                     <li><a><i class="fa fa-clock-o orange_color"></i> <span>Inicio</span></a></li>
+                     <li><a asp-controller="Home" asp-action="Index"><i class="fa fa-clock-o orange_color"></i> <span>Inicio</span></a></li>
                      <li class="active">
                         <a href="#dashboard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-dashboard yellow_color"></i> <span>Mantenimiento</span></a>
                         <ul class="collapse list-unstyled" id="dashboard">
@@ -92,10 +92,7 @@
                      <li>
                         <a href="#element" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-object-group blue2_color"></i> <span>Auditoria</span></a>
                         <ul class="collapse list-unstyled" id="element">
-                           <li><a>> <span>Seccion 1</span></a></li>
-                           <li><a >> <span>Seccion 2</span></a></li>
-                           <li><a >> <span>Seccion 3</span></a></li>
-                           <li><a >> <span>Seccion 4</span></a></li>
+                           <li><a>> <span>Crear Auditoria</span></a></li>
                         </ul>
                      </li>
                      
