Pantallas de Configuraciones

--- a/Proyecto-Auditoria/Proyecto-Auditoria/Views/Shared/_Layout.cshtml
+++ b/Proyecto-Auditoria/Proyecto-Auditoria/Views/Shared/_Layout.cshtml
@@ -95,6 +95,14 @@
                            <li><a>> <span>Crear Auditoria</span></a></li>
                         </ul>
                      </li>
+
+                     <li>
+                        <a href="#configuraciones" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-gear purple_color"></i> <span>Configuraciones</span></a>
+                        <ul class="collapse list-unstyled" id="configuraciones">
+                           <li><a asp-controller="TipoActivo" asp-action="Index">> <span>Tipo de activo</span></a></li>
+                           <li><a asp-controller="CaracteristicasTipo" asp-action="Index">> <span>Caracteristica por tipo</span></a></li>
+                        </ul>
+                     </li>
                      
                   </ul>
                </div>
