--- a/Proyecto-Auditoria/Proyecto-Auditoria/Views/Shared/_Layout.cshtml
+++ b/Proyecto-Auditoria/Proyecto-Auditoria/Views/Shared/_Layout.cshtml
@@ -92,7 +92,8 @@
                      <li>
                         <a href="#element" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-object-group blue2_color"></i> <span>Auditoria</span></a>
                         <ul class="collapse list-unstyled" id="element">
-                           <li><a>> <span>Crear Auditoria</span></a></li>
+                           <li><a asp-controller="Auditoria" asp-action="Index">> <span>Crear Auditoria</span></a></li>
+
                         </ul>
                      </li>
 
