Video Proyecto Final Auditoria

--- a/Proyecto-Auditoria/Proyecto-Auditoria/Views/Auditoria/Index.cshtml
+++ b/Proyecto-Auditoria/Proyecto-Auditoria/Views/Auditoria/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.FechaFinal)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CodigoActivoNavigation)
+                Descripcion del Activo
             </th>
             <th></th>
         </tr>
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.FechaFinal)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoActivoNavigation.CodigoActivo)
+                @Html.DisplayFor(modelItem => item.CodigoActivoNavigation.Descripcion)
             </td>
             <td>
 
